Fix responsive design for tablet and desktop so that full text box and number of characters remaining are visible at ideal screen size.

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -72,10 +72,19 @@
     margin-right: 0.5em;
     padding: 20px;
   }
-  
+
+  .new-tweet {
+    width: 60%;
+  }
+
   .tweets {
+    width: 90%;
     margin-top: 200px;
     margin-left: -275px;
+  }
+
+  .tweet-article p {
+    word-wrap: break-word;
   }
 }
 
@@ -111,8 +120,16 @@
     padding: 20px;
   }
 
+  .new-tweet {
+    width: 100%;
+  }
+
   .tweets {
     margin-top: 0px;
     margin-left: 0px;
+  }
+
+  .tweet-article p {
+    word-wrap: break-word;
   }
 }
